some miner changes in pom.xml and App.java and AppTest.java